fix styling for the overlap of forms

--- a/src/components/EmojiPicker/EmojiPicker.scss
+++ b/src/components/EmojiPicker/EmojiPicker.scss
@@ -3,7 +3,7 @@
 /* ===== EmojiPicker SCSS ===== */
 
 .emoji-picker-container {
-  position: fixed;
+  position: absolute;
   padding: 20px 20px;
   height: 280px;
   width: 200px;
