--- a/src/components/UserForm/UserForm.scss
+++ b/src/components/UserForm/UserForm.scss
@@ -4,6 +4,7 @@
 
 .user-form-container {
   float: left;
+  position: relative;
   padding: 5px 20px;
   height: 200px;
   width: 250px;
